<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/home_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/menu"
                android:contentDescription="@string/menu_image"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toTopOf="@+id/restaurant_title_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.246"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.021" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/restaurant_title_textview"
                android:text="@string/restaurant_name"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@id/home_imageview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/hometext_textview"
                android:text="@string/home_text"
                android:layout_marginTop="20dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="@+id/restaurant_title_textview"
                app:layout_constraintStart_toStartOf="@+id/restaurant_title_textview"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_title_textview"/>

            <ImageView
                android:id="@+id/home_imageview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/menu"
                android:contentDescription="@string/menu_image"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/hometext_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.246"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.021" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/about_pizzas"
                android:text="@string/our_pizzas"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@id/home_imageview2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/pizza_details"
                android:text="@string/about_pizzas"
                android:layout_marginTop="20dp"
                android:textColor="#ffffff"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                app:layout_constraintEnd_toEndOf="@+id/about_pizzas"
                app:layout_constraintStart_toStartOf="@+id/about_pizzas"
                app:layout_constraintTop_toBottomOf="@+id/about_pizzas"/>

            <ImageView
                android:id="@+id/home_imageview3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/menu"
                android:contentDescription="@string/menu_image"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/home_imageview2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.246"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.021" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/about_pastas"
                android:text="@string/our_pastas"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@id/home_imageview3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/pasta_details"
                android:text="@string/about_pastas"
                android:layout_marginTop="20dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="@+id/about_pastas"
                app:layout_constraintStart_toStartOf="@+id/about_pastas"
                app:layout_constraintTop_toBottomOf="@+id/about_pastas"/>

            <ImageView
                android:id="@+id/home_imageview4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/menu"
                android:contentDescription="@string/menu_image"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/home_imageview3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.246"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.021" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/about_stores"
                android:text="@string/locations"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@id/home_imageview4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/store_details"
                android:text="@string/about_locations"
                android:layout_marginTop="20dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="@+id/about_stores"
                app:layout_constraintStart_toStartOf="@+id/about_stores"
                app:layout_constraintTop_toBottomOf="@+id/about_stores"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>